# Web-vuln-scanner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: vulnerable_app.py
tests/: test_active.py  test_batch.py  test_browser.py  test_checks.py  test_critical.py  test_finish.py  test_more.py  test_oob.py  test_pro.py  test_progress.py  test_scanner.py  test_skills.py  test_skills2.py  test_ssrf.py  test_templates.py  test_xss_context.py
webscan/: __init__.py  __main__.py  browser_crawler.py  cli.py  collaborator.py  crawler.py  http_client.py  models.py  nuclei.py  owasp.py  payloads.py  progress.py  report.py  scanner.py  tamper.py  templates_engine.py
webscan/checks/: __init__.py  base.py  cookies.py  cors.py  forced_browsing.py  forms.py  graphql_introspection.py  host_header.py  http_methods.py  jwt.py  secrets.py  security_headers.py  sensitive_files.py  server_disclosure.py  tls.py  waf.py  web_cache_deception.py  web_cache_poisoning.py
webscan/checks/active/: __init__.py  command_injection.py  crlf.py  hpp.py  idor.py  lfi.py  mass_assignment.py  nosqli.py  open_redirect.py  path_traversal.py  sqli.py  ssrf.py  ssti.py  xss.py  xxe.py
webscan/templates/: exposed-env-file.yaml  phpinfo-exposure.yaml  spring-actuator.yaml
